--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
+server.port=8082
 server.contextPath=/chargeback
-eureka.client.service-url.defualtZone=${vcap.services.ocr-eureka.credentials.uri:http://localhost:8761/eureka/}
-
-eureka.instance.hostname=${vcap.application.uris[0]:localhost}
-eureka.instance.metadataMap.instanceId=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
-
+eureka.client.service-url.defualtZone=http://localhost:8761/eureka/
+eureka.instance.hostname=mumbai
