--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 server.port=8082
 server.contextPath=/chargeback
-eureka.client.service-url.defualtZone=http://localhost:8761/eureka/
-eureka.instance.hostname=mumbai
+eureka.client.service-url.defualtZone=https://eureka-service.cglean.com/eureka/
