--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-- name: chargebackMicro
+- name: chargeback-ui
   memory: 512M
   random-route: true
-  host: chargeback-micro
+  host: chargeback-ui
   
-path: target/chargeback-0.0.1-SNAPSHOT.jar
+path: target/chargeback-ui-0.0.1-SNAPSHOT.jar
