--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,19 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.chargeback</groupId>
-	<artifactId>chargeback</artifactId>
+	<groupId>com.cglean</groupId>
+	<artifactId>chargeback-ui</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>chargebackMicro</name>
+	<name>chargeback-ui</name>
 	<description>ChargeBack project for Spring Boot</description>
+
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-starter-parent</artifactId>
-		<version>Angel.SR6</version>
+		<version>Brixton.SR4</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -31,11 +33,6 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.cloudfoundry</groupId>
-			<artifactId>cloudfoundry-client-lib</artifactId>
-			<version>1.1.3</version>
 		</dependency>
 
 		<dependency>
@@ -58,5 +55,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 </project>
